# touchbot_2rails_new

./: AR0234_driver.py  cableDrivenSurface.py  cable_forces.pkl  cable_tension_sensor.py  camera_driver.py  cdsDeformer.py  experiment.py  flexx2_driver.py  force_exp_testdata.pkl  gaussian_kernel.py  modal_analysis.py  motor_commander.py  palm_simulator.py  palm_size2.pickle  stroke_params.xlsx  touch_force_sensor.py  touch_force_sensor_array.py  touch_force_sensor_single.py  touchbot_controller.py  utilities.py
NN_models/: size3_length_force_noContact.pt  size3_length_force_noContact_gaussian.npz  size3_length_force_noContact_stats.npz
data/: force_exp_traindata.pkl  sim_real_forces_noContact.pkl  size3_data_noContact.pkl  size3_noContact_lengthForce_test.pkl
esp32_command_test/: esp32_command_test.ino
libroyale-5.16.1.3725-LINUX-x86-64Bit/: CHANGELOG.txt  ThirdPartySoftware.txt
libroyale-5.16.1.3725-LINUX-x86-64Bit/samples/cpp/sampleRawData/: CMakeLists.txt  sampleRawData.cpp
libroyale-5.16.1.3725-LINUX-x86-64Bit/samples/cpp/sampleRetrieveData/: CMakeLists.txt  sampleRetrieveData.cpp
models/: force_regression_model.pkl  generate_robot_description.py  palm_size2.pickle  palm_size2.tet  palm_size3.pickle  palm_size3.tet
scripts/: calibrate_lengths.py  check_noContact_sim_real.py  collect_contact_data.py  collect_noContactdata.py  data_noContact_1.pkl  generate_stroke_parameters.py  test_arm_touch_force.py  test_calibration_sim.py  test_execute_traj.py  test_force_regression.py  test_length_force.py  test_multiprocess.py  test_noContact_gaussian.py  (+6 more)
(+341 files in other folders)
